Update font size to prevent zoom in behaviour on safari

--- a/frontend/components/FormField/FormTemplate.module.css
+++ b/frontend/components/FormField/FormTemplate.module.css
@@ -8,6 +8,10 @@
     margin-top: 0.5rem;
 }
 
+.template-input-container input {
+    font-size: 1rem;
+}
+
 .bottom-lined {
     --input-padding: 0.5rem;
     --label-filled-state-padding: 0;
